[gd_scene load_steps=8 format=4 uid="uid://cvxyvegp0layy"]

[ext_resource type="Script" uid="uid://b24qtcagoaujl" path="res://scripts/levels/level-2.gd" id="1_o6t8s"]
[ext_resource type="TileSet" uid="uid://dhbkxihst4aan" path="res://assets/art/tile_map/tile_set.tres" id="2_5d0y8"]
[ext_resource type="PackedScene" uid="uid://di6qsnp8sox0m" path="res://scenes/objects/gear-platform.tscn" id="3_f3p6n"]
[ext_resource type="PackedScene" uid="uid://cucnixstb2sbf" path="res://scenes/objects/switch.tscn" id="3_tn3yb"]
[ext_resource type="PackedScene" uid="uid://ckvsvy1qhbian" path="res://scenes/background/parallax-bg-generic.tscn" id="5_5d0y8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4ndn"]
size = Vector2(4, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tn3yb"]
size = Vector2(4, 48)

[node name="Level-2" type="Node2D" groups=["levels"]]
script = ExtResource("1_o6t8s")
spawn_positions = Array[Vector2]([Vector2(32, 164), Vector2(360, 72)])

[node name="Layers" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Layers"]
z_index = 1
tile_map_data = PackedByteArray("AAAAAAsAAAABAAAAAAABAAsAAAABAAAAAAACAAsAAAABAAAAAAADAAwAAAABAAEAAAAEAAwAAAABAAEAAAAFAAwAAAABAAEAAAAGAAwAAAABAAEAAAAHAAwAAAABAAEAAAAIAAwAAAABAAEAAAAJAAwAAAABAAEAAAAKAAwAAAABAAEAAAALAAwAAAABAAEAAAAMAAwAAAABAAEAAAANAAwAAAABAAEAAAAMAAsAAAABAAAAAAALAAsAAAABAAAAAAAKAAsAAAABAAAAAAAJAAsAAAABAAAAAAAIAAsAAAABAAAAAAAHAAsAAAABAAAAAAAGAAsAAAABAAAAAAAFAAsAAAABAAAAAAAEAAsAAAABAAAAAAADAAsAAAABAAAAAAANAAsAAAABAAAAAAAOAAsAAAABAAAAAAAPAAsAAAABAAAAAAAQAAsAAAABAAAAAAARAAsAAAABAAAAAAASAAsAAAABAAAAAAATAAsAAAABAAEAAAAUAAsAAAABAAEAAAAVAAsAAAABAAEAAAAWAAsAAAABAAEAAAAXAAsAAAABAAEAAAAXAAwAAAABAAEAAAAXAA0AAAABAAEAAAAWAA0AAAABAAEAAAAVAA0AAAABAAEAAAAUAA0AAAABAAEAAAATAA0AAAABAAEAAAASAA0AAAABAAEAAAARAA0AAAABAAEAAAAQAA0AAAABAAEAAAAPAA0AAAABAAEAAAAOAA0AAAABAAEAAAANAA0AAAABAAEAAAAMAA0AAAABAAEAAAALAA0AAAABAAEAAAAKAA0AAAABAAEAAAAJAA0AAAABAAEAAAAIAA0AAAABAAEAAAAHAA0AAAABAAEAAAAGAA0AAAABAAEAAAAFAA0AAAABAAEAAAAEAA0AAAABAAEAAAADAA0AAAABAAEAAAACAA0AAAABAAEAAAABAA0AAAABAAEAAAAAAA0AAAABAAEAAAAAAAwAAAABAAEAAAABAAwAAAABAAEAAAACAAwAAAABAAEAAAAOAAwAAAABAAEAAAAPAAwAAAABAAEAAAAQAAwAAAABAAEAAAARAAwAAAABAAEAAAASAAwAAAABAAEAAAATAAwAAAABAAEAAAAUAAwAAAABAAEAAAAVAAwAAAABAAEAAAAWAAwAAAABAAEAAAAAAAgAAAACAAIAAAAAAAcAAAACAAEAAAAAAAYAAAACAAEAAAAAAAUAAAACAAEAAAAAAAQAAAACAAEAAAAAAAMAAAACAAEAAAAAAAIAAAACAAEAAAAAAAEAAAACAAEAAAAAAAAAAAABAAEAAAABAAAAAAABAAIAAAACAAAAAAABAAIAAAADAAAAAAABAAIAAAAEAAAAAAABAAIAAAAFAAAAAAABAAIAAAAGAAAAAAABAAIAAAAHAAAAAAABAAIAAAAIAAAAAAABAAIAAAAJAAAAAAABAAIAAAAKAAAAAAABAAIAAAALAAAAAAABAAIAAAAMAAAAAAABAAIAAAANAAAAAAABAAIAAAAOAAAAAAABAAIAAAAPAAAAAAABAAIAAAAQAAAAAAABAAIAAAARAAAAAAABAAIAAAASAAAAAAABAAIAAAATAAAAAAABAAIAAAAUAAAAAAABAAIAAAAVAAAAAAABAAIAAAAWAAAAAAABAAIAAAAXAAAAAAABAAEAAAAXAAEAAAAAAAEAAAAXAAIAAAAAAAEAAAAXAAYAAAABAAAAAAAXAAcAAAABAAEAAAAXAAgAAAABAAEAAAAXAAkAAAABAAEAAAAXAAoAAAABAAEAAAAWAAYAAAABAAAAAAAWAAcAAAABAAEAAAAWAAgAAAABAAEAAAAWAAkAAAABAAEAAAAWAAoAAAABAAEAAAAVAAoAAAABAAEAAAAUAAoAAAABAAEAAAATAAoAAAAAAAEAAAATAAkAAAAAAAEAAAATAAgAAAAAAAEAAAATAAcAAAAAAAEAAAATAAYAAAAAAAAAAAAUAAYAAAABAAAAAAAVAAYAAAABAAAAAAAVAAcAAAABAAEAAAAUAAcAAAABAAEAAAAUAAgAAAABAAEAAAAVAAgAAAABAAEAAAAVAAkAAAABAAEAAAAUAAkAAAABAAEAAAA=")
tile_set = ExtResource("2_5d0y8")

[node name="Exits" type="Node2D" parent="."]

[node name="Exit1" type="Area2D" parent="Exits"]
position = Vector2(2, 160)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exits/Exit1"]
shape = SubResource("RectangleShape2D_a4ndn")

[node name="Exit2" type="Area2D" parent="Exits"]
position = Vector2(382, 72)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exits/Exit2"]
shape = SubResource("RectangleShape2D_tn3yb")

[node name="Switch" parent="." instance=ExtResource("3_tn3yb")]
position = Vector2(24, 120)

[node name="GearPlatform" parent="." instance=ExtResource("3_f3p6n")]
position = Vector2(280, 152)
angular_velocity = -10.0

[node name="Parallax-bg-generic" parent="." instance=ExtResource("5_5d0y8")]

[connection signal="body_entered" from="Exits/Exit1" to="." method="_on_exit_1_body_entered"]
[connection signal="body_entered" from="Exits/Exit2" to="." method="_on_exit_2_body_entered"]
[connection signal="switched" from="Switch" to="." method="_on_switch_switched"]
